--- a/WS101 INDIVIDUAL/index.html
+++ b/WS101 INDIVIDUAL/index.html
@@ -22,10 +22,10 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="/images/main11.png" alt="main">
+            <img src="main11.png" alt="main">
         </div>
         <div class="home-img1">
-            <img src="/images/main1.jpg" alt="main">
+            <img src="main1.jpg" alt="main">
         </div>
         <div class="home-content">
             <h1>Hi, I'm <span>Karsten Cruz</span></h1>
@@ -49,8 +49,8 @@
                     scream loudly and they also call me day out because when I was a baby I look like the baby in the
                     movie called baby's day out.
                 </p>
-                <img src="/images/kiddo.jpg" alt="lalala">
-                <img src="/images/flyff.png" alt="lalala">
+                <img src="kiddo.jpg" alt="lalala">
+                <img src="flyff.png" alt="lalala">
                 <p class="p1"> Fun fact: My papa told me that when I was 3 years old, I already know how to play a game
                     in a
                     computer,
@@ -88,22 +88,22 @@
         <div class="line-break"></div>
 
         <div>
-            <img src="/images/image1.jpg" alt="">
-            <img src="/images/image2.jpg" alt="">
-            <img src="/images/image3.jpg" alt="">
-            <img src="/images/image4.jpg" alt="">
-            <img src="/images/image5.jpg" alt="">
-            <img src="/images/image6.jpg" alt="">
-            <img src="/images/image7.jpg" alt="">
-            <img src="/images/image8.jpg" alt="">
-            <img src="/images/image9.jpg" alt="">
-            <img src="/images/image10.jpg" alt="">
-            <img src="/images/image11.jpg" alt="">
-            <img src="/images/image12.jpg" alt="">
-            <img src="/images/image13.jpg" alt="">
-            <img src="/images/image14.jpg" alt="">
-            <img src="/images/image15.jpg" alt="">
-            <img src="/images/image16.jpg" alt="">
+            <img src="image1.jpg" alt="">
+            <img src="image2.jpg" alt="">
+            <img src="image3.jpg" alt="">
+            <img src="image4.jpg" alt="">
+            <img src="image5.jpg" alt="">
+            <img src="image6.jpg" alt="">
+            <img src="image7.jpg" alt="">
+            <img src="image8.jpg" alt="">
+            <img src="image9.jpg" alt="">
+            <img src="image10.jpg" alt="">
+            <img src="image11.jpg" alt="">
+            <img src="image12.jpg" alt="">
+            <img src="image13.jpg" alt="">
+            <img src="image14.jpg" alt="">
+            <img src="image15.jpg" alt="">
+            <img src="image16.jpg" alt="">
         </div>
     </section>
 
